Styling | Fixed Grammar Info Chapter Number Alignment

--- a/src/styles/sass/components/learn/GrammarInfo.module.scss
+++ b/src/styles/sass/components/learn/GrammarInfo.module.scss
@@ -12,6 +12,10 @@
   padding: 0;
 }
 
+.chapterNumber {
+  margin-left: 2px;
+}
+
 .header {
   font-family: "Ciutadella Rounded Medium", "Segoe UI", sans-serif;
   padding: 10px;
